<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mathemagicians.hus.CategoryActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:background="@color/opaqueRed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:text="@string/category"
            android:layout_margin="5dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/cate1"
                android:text="@string/opt1"
                android:buttonTint="@color/white"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/cate2"
                android:text="@string/opt2"
                android:buttonTint="@color/white"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/cate3"
                android:text="@string/opt3"
                android:buttonTint="@color/white"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <Button
            android:layout_marginTop="50dp"
            android:onClick="next"
            android:text="@string/next"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:background="@drawable/next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</RelativeLayout>
