<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:text="@string/intro"
                android:textSize="16sp"
                android:background="@color/opaqueBlue"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/opaqueBlue"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:background="@color/opaqueBlue"
                android:text="@string/intro1"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/opaqueBlue"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:background="@color/opaqueBlue"
                android:text="@string/intro2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/opaqueBlue"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:background="@color/opaqueBlue"
                android:text="@string/intro3"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/opaqueBlue"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:background="@color/opaqueBlue"
                android:text="@string/intro4"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
