<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mathemagicians.hus.SelfOwnedActivity" >

    <LinearLayout
        android:id="@+id/activity_self_owned"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <com.synnapps.carouselview.CarouselView
            android:id="@+id/carouselView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:fillColor="@color/opaqueRed"
            app:pageColor="@color/red1"
            app:radius="6dp"
            app:slideInterval="3000"
            app:strokeColor="@color/opaqueBlue"
            app:strokeWidth="1dp"/>

        <android.support.v7.widget.CardView
            android:layout_below="@id/carouselView"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/opaqueBlue"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:background="@color/opaqueBlue"
                android:text="@string/self1"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/opaqueBlue"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:background="@color/opaqueBlue"
                android:text="@string/self2"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_below="@id/carouselView"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/opaqueBlue"
            app:cardCornerRadius="20dp">

            <TextView
                android:padding="10dp"
                android:background="@color/opaqueBlue"
                android:text="@string/self3"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>

